--- a/mapp/src/index.css
+++ b/mapp/src/index.css
@@ -2,7 +2,37 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  background-color: #f3f4f6;
-  color: #1f2937;
+.skeleton-box {
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+  background-color: #DDDBDD;
+}
+
+.skeleton-box::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transform: translateX(-100%);
+background-image: linear-gradient(
+  90deg,
+  rgba(255, 255, 255, 0) 0,
+  rgba(255, 255, 255, 0.2) 20%,
+  rgba(255, 255, 255, 0.5) 60%,
+  rgba(255, 255, 255, 0)
+);
+
+  animation: shimmer 2s infinite;
+  content: '';
+}
+
+@keyframes shimmer {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
 }
