--- a/mapp/src/index.css
+++ b/mapp/src/index.css
@@ -34,6 +34,53 @@ background-image: linear-gradient(
   content: '';
 }
 
+.map-animation {
+  opacity: 0%;
+  animation-name: mapAnimation;
+  animation-duration: 3.5s;
+  animation-delay: 1.5s;
+}
+
+.map-flash {
+  opacity: 0%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #f8ffec8c;
+  animation-name: flash;
+  animation-duration: 1.5s;
+  animation-delay: .5s;
+  animation-timing-function: ease-in-out;
+}
+
+.map-shimmer {
+  display: inline-block;
+  position: absolute;
+  overflow: hidden;
+  height: 32rem;
+}
+
+.map-shimmer::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transform: translateX(-100%);
+  background-image: linear-gradient(
+    rgba(241, 255, 247, 0) 0,
+    rgba(241, 255, 247, 0.377) 20%,
+    rgba(241, 255, 247, .5) 60%,
+    rgba(241, 255, 247, 0)
+  );
+
+  animation: vertical-shimmer 2s;
+  animation-delay: 3s;
+  content: '';
+}
+
 @keyframes shimmer {
   0% {
     transform: translateX(-100%);
@@ -43,11 +90,44 @@ background-image: linear-gradient(
   }
 }
 
+@keyframes vertical-shimmer {
+  0% {
+    transform: translateY(-100%);
+  }
+  50% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(-100%);
+  }
+}
+
 @keyframes logoAnimation {
   0% {
     max-height: 100%;
   }
   100% {
     max-height: 0%;
+  }
+}
+
+@keyframes mapAnimation {
+  0% {
+    opacity: 0%;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
+
+@keyframes flash {
+  0% {
+    opacity: 0%;
+  }
+  50% {
+    opacity: 70%;
+  }
+  100% {
+    opacity: 0%;
   }
 }
